Add unit test and fix bugs with DB creation

--- a/conf/accountService.properties
+++ b/conf/accountService.properties
@@ -1,4 +1,4 @@
 accountDb.hostName=localhost	
-accountDb.dbName=playmongo2
-accountDb.collectionName=accounts		
+accountDb.dbName=play2mongo
+accountDb.collectionName=accounts
 
